<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_playlist"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_80"
        app:cardCornerRadius="@dimen/dp_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/iv_playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/children"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/v_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_24"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_4"
                android:paddingStart="@dimen/dp_24"
                android:text="@string/playlist"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_playlist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/playlist_name"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toEndOf="@id/cv_playlist"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_number_of_videos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/number_of_videos"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@id/cv_playlist"
        app:layout_constraintTop_toBottomOf="@id/tv_playlist_name" />

</androidx.constraintlayout.widget.ConstraintLayout>