<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@color/white">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/playlist"
            android:textColor="@color/red"
            android:textSize="20sp" />



    </FrameLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/emotional_well_being_healing_practices_for_children"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_24sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/in_this_series_we_break_down_the_impact_of_displacement_instability_violence_and_trauma_in_children_and_offer_exercises_to_support_children_in_their_healing_journey"
                        android:textColor="@color/black"
                        android:layout_marginBottom="@dimen/_8dp"
                        android:textSize="@dimen/_15sp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/red"
                        android:contentDescription="@string/app_name"
                 android:src="@drawable/baseline_arrow_back_24"
                        app:tint="@color/white" />



                </LinearLayout>



            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_video_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sp_16"
                android:text="@string/_32_video_series"
                android:textColor="@color/black"
                android:textSize="12sp" />




        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_detail" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>




        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/red"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>

<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ui.detail.DetailActivity">-->
<!--&lt;!&ndash;<include&ndash;&gt;-->
<!--&lt;!&ndash;    android:visibility="gone"&ndash;&gt;-->
<!--&lt;!&ndash;    layout="@layout/include_layout"&ndash;&gt;-->
<!--&lt;!&ndash;    android:id="@+id/include"/>&ndash;&gt;-->
<!--&lt;!&ndash;    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;        android:id="@+id/cv_imagee"&ndash;&gt;-->
<!--&lt;!&ndash;        android:textSize="@dimen/sp_18"&ndash;&gt;-->

<!--&lt;!&ndash;        android:textColor="#FF0000"&ndash;&gt;-->
<!--&lt;!&ndash;        android:text="@string/name_list"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_marginLeft="150dp"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_marginTop="@dimen/dp_16"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="62dp"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="@dimen/dp_24"/>&ndash;&gt;-->



<!--&lt;!&ndash;        <ImageView&ndash;&gt;-->

<!--&lt;!&ndash;            android:layout_marginLeft="@dimen/dp_32"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginTop="17dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:src="@drawable/baseline_arrow_back_24"&ndash;&gt;-->
<!--&lt;!&ndash;            app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;            app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="35dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="22dp"/>&ndash;&gt;-->

<!--&lt;!&ndash;    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;        android:id="@+id/tv_titil"&ndash;&gt;-->
<!--&lt;!&ndash;        android:textStyle="bold"&ndash;&gt;-->
<!--&lt;!&ndash;        android:textSize="@dimen/dp_24"&ndash;&gt;-->
<!--&lt;!&ndash;        android:text="Emotional Well-being  Healing Practices for Children"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_marginLeft="@dimen/dp_16"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;android:layout_marginTop="80dp"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="328dp"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="60dp"/>&ndash;&gt;-->
<!--&lt;!&ndash;    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;android:id="@+id/tv_desc"&ndash;&gt;-->
<!--&lt;!&ndash;        android:textColor="#1A1A1A"&ndash;&gt;-->
<!--&lt;!&ndash;android:text="In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey. "&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_marginLeft="@dimen/dp_16"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_marginTop="148dp"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="@dimen/dp_328"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="80dp"/>&ndash;&gt;-->
<!--&lt;!&ndash;    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;        android:textColor="#151515"&ndash;&gt;-->
<!--&lt;!&ndash;        android:text="@string/list_name"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_marginLeft="@dimen/dp_16"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_marginTop="268dp"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="96dp"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="16dp"/>&ndash;&gt;-->
<!--<androidx.recyclerview.widget.RecyclerView-->
<!--    android:id="@+id/recycler_detail"-->



<!--   tools:listitem="@layout/item_detail"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"/>-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->